ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mohanad-portfolio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 141.72.13.250.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mohanad-portfolio-service
            port:
              number: 80
